# lildevil

./: .gitignore  .gitlab-ci.yml  CMakeLists-backup.txt  CMakeLists.txt  LICENSE  README.md  build.sh  chocolateyInstall.ps1  clean.sh  conanfile.txt  entitlements  lildevil.qrc  lildevil.rb  lildivil.rb  snapcraft.yaml  sonar-project.properties  xcode-dist.sh
.github/workflows/: build.yml  ccpp.yml
Casks/: lildevil.rb
cmake/: MacOSXBundleInfo.plist.in  QtCommon.cmake
res/: AppIcon.icns  AppIcon.xpm
src/: configdialog.cpp  configdialog.h  confluencetab.cpp  confluencetab.h  githubtab.cpp  githubtab.h  jenkinstab.cpp  jenkinstab.h  jiraissue.cpp  jiraissue.h  jiratab.cpp  jiratab.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h
